src/test/ui/issues/issue-19601.stderr
error: compilation successful
  --> $DIR/issue-19601.rs:8:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

